add all html part

--- a/index.html
+++ b/index.html
@@ -1,1 +1,36 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title> Tip Calculator</title>
+</head>
+<body>
+    <div class='container'>
+        <div class='wrapper'>
+                        <h1>Tip calculator</h1>
+                        <p>How much was your bill?</p>
+                        <input type="text" id ='bill' name="bill">
+                        <p>How was your service?</p>
+                        <select id="service">
+                            <option value="30">30% - Outstanding</option>
+                            <option value="20">20% - Good</option>
+                            <option value="15">15% - It was OK</option>
+                            <option value="10">10% - Bad</option>
+                            <option value="5">5% - Terrible</option>
+                        </select>
+                        <p>How many people are sharing the bill?</p>
+                        <input type="text" id ='people' name="people">
+                        <button id='calculate'>Calculate</button>
+                        <div>
+                            <p id='tipP'>Tip amount:</p>
+                            <span id='result'>0</span>
+                            <span id ='each'>each</span>
+                        </div> 
+                </div>
+          </div>
+    <script src="script.js"></script>
+</body>
+</html>
